k8s/service-mesh/destination-rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: product-service
  namespace: learning-microservices

spec:
  host: product-service

  subsets:
    - name: v1
      labels:
        version: v1

    - name: v2
      labels:
        version: v2

  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 5s

      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 10

    outlierDetection:
      consecutive5xxErrors: 5
      interval: 5s
      baseEjectionTime: 30s
      maxEjectionPercent: 50
